--- a/nginx.conf
+++ b/nginx.conf
@@ -8,13 +8,34 @@ http {
 
     server {
 
+        listen 8701;
+
+        location / {
+            proxy_pass http://0.0.0.0:8701/;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header Host $host;
+            proxy_set_header X-Request-Start "t=${msec}";
+            proxy_redirect off;
+
+            proxy_read_timeout 300;
+
+            proxy_buffer_size 16k;
+            proxy_buffers 32 16k;
+        }
+    }
+
+    server {
+
         listen 80;
         listen 443 ssl;
+
         #server_name test.example.com;
 
 
         location / {
-            proxy_pass http://localhost:3001/;
+            proxy_pass http://0.0.0.0:3001/;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_set_header X-Real-IP $remote_addr;
